--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^21.0.0",
+    "@angular/cdk": "^21.0.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
@@ -42,7 +43,7 @@
     "@angular-eslint/builder": "20.6.0",
     "@angular-eslint/eslint-plugin": "20.6.0",
     "@angular-eslint/eslint-plugin-template": "20.6.0",
-    "@angular-eslint/schematics": "20.6.0",
+    "@angular-eslint/schematics": "20",
     "@angular-eslint/template-parser": "20.6.0",
     "@angular/build": "^20.3.5",
     "@angular/cli": "^20.3.5",
